tests/pass/ShiftRightUnsign.java
package pass;

public class ShiftRightUnsign {
    public int shiftRightUnsign(int x, int y) {
        return x >>> y;;
    }
}
