tests/fail/ShiftRightUnsign.java
package fail;

public class ShiftRightUnsign {
	public static void main ( String [] args ) {
		System.out.println('a' >>> 42);
	}
}
